Refactor: Migrate to MyBatis-Plus and update project structure
Co-authored-by: 821859805 <821859805@qq.com>